--- a/app/assets/stylesheets/shops/new.scss
+++ b/app/assets/stylesheets/shops/new.scss
@@ -15,6 +15,7 @@
     font-size:20px;
   }
   .times{
+    margin-top: 50px;
     width: 940px;
     display: flex;
     justify-content:space-between;
@@ -23,19 +24,29 @@
     width: 1200px;
     display: flex;
     justify-content:space-between;
+    position: relative;
+    .time{
+      position: absolute;
+      top:-110px;
+    }
+    .shop_id{
+      position: absolute;
+      top:-70px;
+
+    }
     .sale-form-right{
-      width: 40px;
+      width: 50px;
     }
     .sale-form{
-      width: 40px;
-      margin-left: 19px;
+      width: 50px;
+      margin-left: 22px;
     }
   }
   .customer-form-right{
-    width: 40px;
+    width: 50px;
   }
   .customer-form{
-    width: 40px;
-    margin-left: 19px;
+    width: 50px;
+    margin-left: 51px;
   }
 }
