--- a/app/views/shops/index.html.haml
+++ b/app/views/shops/index.html.haml
@@ -20,7 +20,7 @@
   = render  'header'
   .main-space
     .oneday-seler-btn
-      = link_to '単日売上入力', new_shop_path ,class:'seler-btn'
+      = link_to '単日売上入力',  new_sale_path ,class:'seler-btn'
     .total-saler-btn
       集計
     .ranking-btn
