--- a/app/assets/stylesheets/shops/new.scss
+++ b/app/assets/stylesheets/shops/new.scss
@@ -49,4 +49,16 @@
     width: 50px;
     margin-left: 51px;
   }
+  .day{
+    position: absolute;
+    top:-65px;
+    left:200px;
+  }
+  .submit{
+    width: 100px;
+    height: 70px;
+    position: absolute;
+    top:50px;
+    left: 0;
+  }
 }
