--- a/app/views/sales/new.html.haml
+++ b/app/views/sales/new.html.haml
@@ -8,8 +8,8 @@
   .sale-forms
     = form_with model: @sale, local: true do |f|
       =f.date_field :date,class:'time'
-      =f.text_field :shop_id,class:'shop_id'
-      =f.radio_button :days,'平日'
+      =f.number_field :shop,class:'shop_id'
+      =f.select     :day, ['平日','休前日','休日','休後日'],{prompt: "---"}, { class: "day" }
       =f.text_field :ten_oclock,class:'sale-form-right'
       =f.text_field :eleven_oclock,class:'sale-form'
       =f.text_field :twelve_oclock,class:'sale-form'
@@ -22,4 +22,4 @@
       =f.text_field :twenty_oclock,class:'sale-form'
       =f.text_field :twenty_one_oclock,class:'sale-form'
       =f.text_field :twenty_two_oclock,class:'sale-form'
-      =f.submit '送信する'
+      =f.submit '送信する',class:'submit'
