--- a/app/views/shops/index.html.haml
+++ b/app/views/shops/index.html.haml
@@ -22,7 +22,7 @@
     .oneday-seler-btn
       = link_to '単日売上入力',  new_sale_path ,class:'seler-btn'
     .total-saler-btn
-      集計
+      = link_to '集計', sale_path(sales_url)
     .ranking-btn
       ランキング
     .messages-btn
