--- a/app/views/shops/index.html.haml
+++ b/app/views/shops/index.html.haml
@@ -22,10 +22,8 @@
     .oneday-seler-btn
       = link_to '単日売上入力',  new_sale_path ,class:'seler-btn'
     .total-saler-btn
-      = link_to '集計', sale_path(sales_url)
+      = link_to '集計', sale_path(sales_url),class:'total-btn'
     .ranking-btn
       ランキング
-    .messages-btn
-      メッセージ
   .topic
     info
