--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -1,66 +1,66 @@
-.times{
+.time-list{
   margin-top: 50px;
   margin-left: 300px;
   width: 1000px;
   display: flex;
   justify-content:space-between;
   background-color: gray;
-  .ten{
+  .ten-sub{
     border:solid 1px black;
     width:100px;
     text-align: center;
   }
-  .eleven{
+  .eleven-sub{
     border:solid 1px black;
     width:100px;
     text-align: center;
   }
-  .twelve{
+  .twelve-sub{
     border:solid 1px black;
     width:100px;
     text-align: center;
   }
-  .thir-teen{
+  .thir-teen-sub{
     border:solid 1px black;
     width:100px;
     text-align: center;
   }
-  .four-teen{
+  .four-teen-sub{
     border:solid 1px black;
     width:100px;
     text-align: center;
   }
-  .fif-teen{
+  .fif-teen-sub{
     border:solid 1px black;
     width:100px;
     text-align: center;
   }
-  .seven-teen{
+  .seven-teen-sub{
     border:solid 1px black;
     width:100px;
     text-align: center;
   }
-  .eigh-teen{
+  .eigh-teen-sub{
     border:solid 1px black;
     width:100px;
     text-align: center;
   }
-  .nine-teen{
+  .nine-teen-sub{
     border:solid 1px black;
     width:100px;
     text-align: center;
   }
-  .twenty-teen{
+  .twenty-teen-sub{
     border:solid 1px black;
     width:100px;
     text-align: center;
   }
-  .twenty-one{
+  .twenty-one-sub{
     border:solid 1px black;
     width:100px;
     text-align: center;
   }
-  .twenty-two{
+  .twenty-two-sub{
     border:solid 1px black;
     width:100px;
     text-align: center;
