--- a/app/views/sales/show.html.haml
+++ b/app/views/sales/show.html.haml
@@ -3,7 +3,7 @@
 - @sales.each do |sale| 
   .content
     .shop-names
-      店名
+      = @shop.shop_name
       .shop-name
         大阪なんば
     .total
