--- a/app/assets/stylesheets/sales.scss
+++ b/app/assets/stylesheets/sales.scss
@@ -1,3 +1,51 @@
 // Place all the styles related to the sales controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.btns{
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 60px;
+  margin-left: 300px;
+  position: relative;
+  .shop-btn{
+    margin-left: 20px;
+    margin-top: 20px;
+    display: block;
+    height:160px;
+    width: 130px;
+    border-radius: 10%;
+    border: solid #cccccc;
+    background-color: #f5f5f5;
+    line-height: 200px;
+    font-size: 20px;
+    text-align: center;
+    box-shadow: 2px 2px 2px 3px grey;
+    text-decoration: none;
+    color:black;
+    display: block;
+    }
+  }
+.btn2{
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 60px;
+  position: relative;
+  margin-left: 300px;
+  .shop-btn{
+    margin-left: 20px;
+    margin-top: 20px;
+    display: block;
+    height:160px;
+    width: 130px;
+    border-radius: 10%;
+    border: solid #cccccc;
+    background-color: #f5f5f5;
+    line-height: 200px;
+    font-size: 20px;
+    text-align: center;
+    box-shadow: 2px 2px 2px 3px grey;
+    text-decoration: none;
+    color:black;
+    display: block;
+  }
+}
