--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -4,19 +4,14 @@
   width: 1000px;
   display: flex;
   justify-content:space-between;
-  background-color: gray;
-  .shop-names{
+  background-color: #f5f5f5;
+  .text-date{
     border:solid 1px black;
+    width:74px;
     text-align: center;
-    width:100px;
-    background-color: gray;
     position: absolute;
-    left:198px;
-    top:-26px;
-    .shop-name{
-      background-color: #fff;
-      border-top:solid 1px black;
-    }
+    left:225px;
+    background-color: #f5f5f5;
   }
   .ten-sub{
     border:solid 1px black;
@@ -79,12 +74,19 @@
     text-align: center;
   }
 }
+
 .content{
-  padding-left:300px;
+  padding-left:225px;
   position: relative;
   
   .total{
     display: flex;
+    .date{
+      background-color: #f5f5f5;
+      border-left:solid 0.1px black  ;
+      border-bottom:solid 0.1px black  ;
+      border-top:solid 0.1px black  ;
+    }
     .ten-oc{
       border-left:solid 1px black  ;
       border-right:solid 1px black  ;
