--- a/app/views/sales/show.html.haml
+++ b/app/views/sales/show.html.haml
@@ -1,5 +1,15 @@
 = render 'header'
-= render 'time'
+.btns
+  = link_to 'なんば店' ,nanba_sales_path,class:'shop-btn',id:'nanba'
+  = link_to '熊取店' ,kumatori_sales_path,class:'shop-btn',id:'kuma'
+  = link_to '貝塚店' ,kaizuka_sales_path,class:'shop-btn',id:'kai'
+  = link_to '阪南店' ,hannan_sales_path,class:'shop-btn',id:'han'
+  = link_to '堺店' ,sakai_sales_path,class:'shop-btn',id:'saka'
+.btn2
+  = link_to '梅田店' ,umeda_sales_path,class:'shop-btn',id:'ume'
+  = link_to '和泉府中店' ,izumihuchu_sales_path,class:'shop-btn',id:'izu'
+  = link_to '西九条店' ,nishikujyo_sales_path,class:'shop-btn',id:'nishi'
+  = link_to '天王寺' ,tennouji_sales_path,class:'shop-btn',id:'ten'
+  = link_to '鳳店' ,ootori_sales_path,class:'shop-btn',id:'ooto'
 
-= link_to 'なんば店' ,nanba_sales_path
 
