--- a/app/views/shops/_header.html.haml
+++ b/app/views/shops/_header.html.haml
@@ -2,4 +2,5 @@
   .logp
     = link_to 'managit',root_path,class:'logo'
   .shop-name
-    = "shop name: 大阪なんば店"
+    = link_to '店舗登録',new_shop_path
+  
