--- a/app/assets/stylesheets/sales.scss
+++ b/app/assets/stylesheets/sales.scss
@@ -1,6 +1,72 @@
-// Place all the styles related to the sales controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.times{
+  margin-top: 50px;
+  margin-left: 300px;
+  width: 1000px;
+  display: flex;
+  justify-content:space-between;
+  background-color: #f5f5f5;
+  .ten{
+    border:solid 1px black;
+    width:100px;
+    text-align: center;
+  }
+  .eleven{
+    border:solid 1px black;
+    width:100px;
+    text-align: center;
+  }
+  .twelve{
+    border:solid 1px black;
+    width:100px;
+    text-align: center;
+  }
+  .thir-teen{
+    border:solid 1px black;
+    width:100px;
+    text-align: center;
+  }
+  .four-teen{
+    border:solid 1px black;
+    width:100px;
+    text-align: center;
+  }
+  .fif-teen{
+    border:solid 1px black;
+    width:100px;
+    text-align: center;
+  }
+  .seven-teen{
+    border:solid 1px black;
+    width:100px;
+    text-align: center;
+  }
+  .eigh-teen{
+    border:solid 1px black;
+    width:100px;
+    text-align: center;
+  }
+  .nine-teen{
+    border:solid 1px black;
+    width:100px;
+    text-align: center;
+  }
+  .twenty-teen{
+    border:solid 1px black;
+    width:100px;
+    text-align: center;
+  }
+  .twenty-one{
+    border:solid 1px black;
+    width:100px;
+    text-align: center;
+  }
+  .twenty-two{
+    border:solid 1px black;
+    width:100px;
+    text-align: center;
+  }
+}
+
 .btns{
   display: flex;
   flex-wrap: wrap;
