--- a/app/views/sales/new.html.haml
+++ b/app/views/sales/new.html.haml
@@ -3,7 +3,7 @@
   
   .form-text
     ・売上
-  .times
+  .timer
     = render 'times'
   .sale-forms
     = form_with model: @sale, local: true do |f|
