--- a/app/views/sales/_times.html.haml
+++ b/app/views/sales/_times.html.haml
@@ -9,6 +9,8 @@
     13時
   .four-teen
     14時
+  .fif-teen
+    15時
   .seven-teen
     17時
   .eigh-teen
@@ -19,3 +21,5 @@
     20時
   .twenty-one
     21時
+  .twenty-two
+    22時
