--- a/app/views/shops/index.html.haml
+++ b/app/views/shops/index.html.haml
@@ -20,9 +20,9 @@
   = render  'header'
   .main-space
     .oneday-seler-btn
-      = link_to '単日売上入力',  new_sale_path ,class:'seler-btn'
+      = link_to '単日売上入力',  new_sales_path ,class:'seler-btn'
     .total-saler-btn
-      = link_to '集計', sale_path(sales_url),class:'total-btn'
+      = link_to '集計', sales_path ,class:'total-btn'
     .ranking-btn
       ランキング
   .topic
