--- a/app/assets/stylesheets/shops/shops.scss
+++ b/app/assets/stylesheets/shops/shops.scss
@@ -71,7 +71,27 @@
     display: block;
     }
   }
-  .ranking-btn{
+  .total-customer-btn{
+    height:220px;
+    width: 200px;
+    border-radius: 10%;
+    border: solid #cccccc;
+    background-color: #f5f5f5;
+    position: absolute;
+    top:300px;
+    left:350px;
+    line-height: 200px;
+    font-size: 20px;
+    text-align: center;
+    box-shadow: 2px 2px 2px 3px gray;
+    cursor: pointer;
+    .total-btn{
+    text-decoration: none;
+    color:black;
+    display: block;
+    }
+    }
+  .customer-btn{
     height:220px;
     width: 200px;
     border-radius: 10%;
@@ -85,6 +105,11 @@
     text-align: center;
     box-shadow: 2px 2px 2px 3px gray;
     cursor: pointer;
+    .custom-btn{
+      text-decoration: none;
+      color:black;
+      display: block;
+    }
   }
   .messages-btn{
     height:220px;
@@ -114,8 +139,19 @@
   position: absolute;
   top:210px;
   left:700px;
-  line-height: 400px;
-  font-size: 20px;
   text-align: center;
   box-shadow: 2px 2px 2px 3px gray;
+  font-size:25px;
+  .one{
+
+  }
+  .two{}
+  .tr{}
+  .fore{}
+  .five{}
+  .six{}
+  .seven{}
+  .eith{}
+  .nine{}
+  .ten{}
 }
