--- a/app/views/shops/index.html.haml
+++ b/app/views/shops/index.html.haml
@@ -22,8 +22,30 @@
     .oneday-seler-btn
       = link_to '単日売上入力',  new_sales_path ,class:'seler-btn'
     .total-saler-btn
-      = link_to '集計', sales_path ,class:'total-btn'
-    .ranking-btn
-      ランキング
+      = link_to '売上集計', sales_path ,class:'total-btn'
+    .total-customer-btn
+      = link_to '客数集計',customers_path,class:'total-btn'
+    .customer-btn
+      = link_to '客数入力', new_customers_path ,class:'custom-btn'
   .topic
-    info
+    店舗コード
+    .one
+      ・大阪なんば店・・１
+    .two
+      ・大阪熊取店・・２
+    .tr
+      ・大阪貝塚・・３
+    .fore
+      ・大阪阪南・・４
+    .five
+      ・大阪堺・・５
+    .six
+      ・大阪梅田・・６
+    .seven
+      ・大阪和泉府中・・７
+    .eith
+      ・大阪西九条・・８
+    .nine
+      ・大阪天王寺・・９
+    .ten
+      ・大阪鳳・・１０
