--- a/app/views/shops/index.html.haml
+++ b/app/views/shops/index.html.haml
@@ -27,6 +27,8 @@
       = link_to '客数集計',customers_path,class:'total-btn'
     .customer-btn
       = link_to '客数入力', new_customers_path ,class:'custom-btn'
+    .shop-name
+      = link_to '店舗情報編集','' ,class:'edit-btn'
   .topic
     店舗コード
     .one
