--- a/app/assets/stylesheets/sales/show.scss
+++ b/app/assets/stylesheets/sales/show.scss
@@ -6,71 +6,105 @@
   justify-content:space-between;
   background-color: #f5f5f5;
   .text-date{
-    border:solid 1px black;
+    border-top:solid 1px black;
+    border-left:solid 1px black;
+    border-bottom:solid 1px black ;
     width:74px;
     text-align: center;
     position: absolute;
     left:225px;
     background-color: #f5f5f5;
   }
+  .text-days{
+    border-top:solid 1px black;
+    border-left:solid 1px black;
+    border-bottom:solid 1px black ;
+    width:99px;
+    text-align: center;
+  }
   .ten-sub{
-    border:solid 1px black;
-    width:100px;
+    border-top:solid 1px black;
+    border-left:solid 1px black;
+    border-bottom:solid 1px black ;
+    width:99px;
     text-align: center;
   }
   .eleven-sub{
-    border:solid 1px black;
-    width:100px;
+    border-top:solid 1px black;
+    border-left:solid 1px black;
+    border-bottom:solid 1px black ;
+    width:98px;
     text-align: center;
   }
   .twelve-sub{
-    border:solid 1px black;
-    width:100px;
+    border-top:solid 1px black;
+    border-left:solid 1px black;
+    border-bottom:solid 1px black ;
+    width:98px;
     text-align: center;
   }
   .thir-teen-sub{
-    border:solid 1px black;
-    width:100px;
+    border-top:solid 1px black;
+    border-left:solid 1px black;
+    border-bottom:solid 1px black ;
+    width:99px;
     text-align: center;
   }
   .four-teen-sub{
-    border:solid 1px black;
-    width:100px;
+    border-top:solid 1px black;
+    border-left:solid 1px black;
+    border-bottom:solid 1px black ;
+    width:98px;
     text-align: center;
   }
   .fif-teen-sub{
-    border:solid 1px black;
-    width:100px;
+    border-top:solid 1px black;
+    border-left:solid 1px black;
+    border-bottom:solid 1px black ;
+    width:98px;
     text-align: center;
   }
   .seven-teen-sub{
-    border:solid 1px black;
-    width:100px;
+    border-top:solid 1px black;
+    border-left:solid 1px black;
+    border-bottom:solid 1px black ;
+    width:98px;
     text-align: center;
   }
   .eigh-teen-sub{
-    border:solid 1px black;
-    width:100px;
+    border-top:solid 1px black;
+    border-left:solid 1px black;
+    border-bottom:solid 1px black ;
+    width:98px;
     text-align: center;
   }
   .nine-teen-sub{
-    border:solid 1px black;
-    width:100px;
+    border-top:solid 1px black;
+    border-left:solid 1px black;
+    border-bottom:solid 1px black ;
+    width:98px;
     text-align: center;
   }
   .twenty-teen-sub{
-    border:solid 1px black;
-    width:100px;
+    border-top:solid 1px black;
+    border-left:solid 1px black;
+    border-bottom:solid 1px black ;
+    width:98px;
     text-align: center;
   }
   .twenty-one-sub{
-    border:solid 1px black;
-    width:100px;
+    border-top:solid 1px black;
+    border-left:solid 1px black;
+    border-bottom:solid 1px black ;
+    width:98px;
     text-align: center;
   }
   .twenty-two-sub{
-    border:solid 1px black;
-    width:100px;
+    border-top:solid 1px black;
+    border-left:solid 1px black;
+    border-right:solid 1px black ;
+    border-bottom:solid 1px black ;
+    width:98px;
     text-align: center;
   }
 }
@@ -85,80 +119,86 @@
       background-color: #f5f5f5;
       border-left:solid 0.1px black  ;
       border-bottom:solid 0.1px black  ;
-      border-top:solid 0.1px black  ;
+      width:75px;
+    }
+    .days{
+      border-left:solid 1px black  ;
+      border-bottom:solid 1px black  ;
+      text-align: center;
+      width:76px;
     }
     .ten-oc{
       border-left:solid 1px black  ;
       border-right:solid 1px black  ;
       border-bottom:solid 1px black  ;
       text-align: center;
-      width:81px;
+      width:77px;
     }
     .eleven-oc{
       border-right:solid 1px black  ;
       border-bottom:solid 1px black  ;
       text-align: center;
-      width:83px; 
+      width:76px; 
     }
     .twelve{
       border-right:solid 1px black  ;
       border-bottom:solid 1px black  ;
       text-align: center;
-      width:83px; 
+      width:75px; 
     }
     .thir-teen{
       border-right:solid 1px black  ;
       border-bottom:solid 1px black  ;
       text-align: center;
-      width:83px; 
+      width:77px; 
     }
     .four-teen{
       border-right:solid 1px black  ;
       border-bottom:solid 1px black  ;
       text-align: center;
-      width:83px; 
+      width:75px; 
     }
     .fif-teen{
       border-right:solid 1px black  ;
       border-bottom:solid 1px black  ;
       text-align: center;
-      width:81px; 
+      width:76px; 
     }
     .seven-teen{
       border-right:solid 1px black  ;
       border-bottom:solid 1px black  ;
       text-align: center;
-      width:81px; 
+      width:76px; 
     }
     .eigh-teen{
       border-right:solid 1px black  ;
       border-bottom:solid 1px black  ;
       text-align: center;
-      width:83px; 
+      width:75px; 
     }
     .nine-teen{
       border-right:solid 1px black  ;
       border-bottom:solid 1px black  ;
       text-align: center;
-      width:83px; 
+      width:76px; 
     }
     .twenty{
       border-right:solid 1px black  ;
       border-bottom:solid 1px black  ;
       text-align: center;
-      width:81px; 
+      width:76px; 
     }
     .twenty-one{
       border-right:solid 1px black  ;
       border-bottom:solid 1px black  ;
       text-align: center;
-      width:83px; 
+      width:75px; 
     }
     .twenty-two{
       border-right:solid 1px black  ;
       border-bottom:solid 1px black  ;
       text-align: center;
-      width:83px; 
+      width:76px; 
     }
   }
 }
